--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Demo",
-    "slug": "Demo",
+    "name": "Demo_Project",
+    "slug": "Demo_Project",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
